chore: update styling and remove nutshell references

--- a/style.css
+++ b/style.css
@@ -2,25 +2,25 @@
     background-image: linear-gradient(135deg, rgb(83, 90, 230) 0%, rgb(110, 115, 128) 50%, rgb(153, 154, 178) 100%);
 }
 
-.dark\:bg-background-dark\/75:is(.dark *) {
+/* .dark\:bg-background-dark\/75:is(.dark *) {
     background-color: #0a0a0a;
-}
+} */
 
-.card {
+/* .card {
     background-color: transparent !important;
 }
 
 .dark\:bg-codeblock:is(.dark *) {
     background-color: #090923 !important;
-}
+} */
 
-.border-standard:is(.dark *) {
+/* .border-standard:is(.dark *) {
     border-color: #20213A !important;
 }
 
 .dark\:border-gray-800\/50:is(.dark *) {
     border-color: #20213A !important;
-}
+} */
 
 :root {
     --primary: 107 113 227;
